--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
 	"nativescript": {
-		"id": "org.nativescript.sampleiosdeeplinking"
+		"id": "org.nativescript.sampleiosdeeplinking",
+		"tns-ios": {
+			"version": "1.2.2"
+		}
 	}
 }
